frame/support/test/tests/benchmark_ui/bad_param_name_too_long.stderr
error: Benchmark parameter names must consist of a single lowercase letter (a-z) and no other characters.
 --> tests/benchmark_ui/bad_param_name_too_long.rs:8:11
  |
8 |     fn bench(xx: Linear<1, 2>) {
  |              ^^
