frame/support/test/tests/benchmark_ui/bad_param_name_too_long.rs
use frame_support::benchmarking::*;
#[allow(unused_imports)]
use frame_support_test::Config;

#[benchmarks]
mod benches {
	#[benchmark]
	fn bench(xx: Linear<1, 2>) {
		#[block]
		{}
	}
}

fn main() {}
